[gd_scene load_steps=16 format=4 uid="uid://b2x7qg7bvv7nj"]

[ext_resource type="Script" uid="uid://dof8qv1w4cdfh" path="res://scripts/battle/Battle.gd" id="1_vbfmk"]
[ext_resource type="Texture2D" uid="uid://bj3w5advxp711" path="res://assets/images/backgrounds/grass.png" id="2_vbfmk"]
[ext_resource type="Texture2D" uid="uid://c5rjg4343budd" path="res://assets/images/backgrounds/attack.png" id="3_2ckr4"]
[ext_resource type="TileSet" uid="uid://qyww4ep3bon5" path="res://resources/tile/Grid.tres" id="3_nyp61"]
[ext_resource type="Script" uid="uid://cm2o2b6w6ewc3" path="res://scripts/battle/TurnManager.gd" id="4_2ckr4"]
[ext_resource type="Texture2D" uid="uid://byw187bmp5id1" path="res://assets/images/backgrounds/move.png" id="4_q5nyf"]
[ext_resource type="Script" uid="uid://by3day4th1m1u" path="res://scripts/battle/DamageManager.gd" id="4_vbfmk"]
[ext_resource type="PackedScene" uid="uid://by87s31e42l5x" path="res://scenes/ui/log/CombatLogUI.tscn" id="6_mgs6c"]
[ext_resource type="Script" path="res://scripts/battle/SetupManager.gd" id="8_q5nyf"]
[ext_resource type="Script" uid="uid://dbtlhnsak2i31" path="res://scripts/battle/MapManager.gd" id="9_q5nyf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nyp61"]
texture = ExtResource("2_vbfmk")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_kos6x"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_nyp61")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgs6c"]
texture = ExtResource("3_2ckr4")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pk84k"]
texture = ExtResource("4_q5nyf")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nyp61"]
tile_size = Vector2i(128, 128)
sources/2 = SubResource("TileSetAtlasSource_mgs6c")
sources/3 = SubResource("TileSetAtlasSource_pk84k")

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_vbfmk")

[node name="TileMap" type="Node2D" parent="."]

[node name="Battle" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_kos6x")

[node name="HighLight" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_nyp61")

[node name="Grid" type="TileMapLayer" parent="TileMap"]
modulate = Color(1, 1, 1, 0.0235294)
tile_map_data = PackedByteArray("AAAAAAAABgAAAAAAAAABAAAABgAAAAAAAAACAAAABgAAAAAAAAADAAAABgAAAAAAAAAEAAEABgAAAAAAAAAFAAEABgAAAAAAAAAGAAEABgAAAAAAAAAHAAEABgAAAAAAAAAHAAAABgAAAAAAAAAGAAAABgAAAAAAAAAFAAAABgAAAAAAAAAEAAAABgAAAAAAAAAAAAEABgAAAAAAAAAAAAIABgAAAAAAAAAAAAMABgAAAAAAAAAAAAQABgAAAAAAAAAAAAUABgAAAAAAAAAAAAYABgAAAAAAAAAAAAcABgAAAAAAAAABAAEABgAAAAAAAAABAAIABgAAAAAAAAABAAMABgAAAAAAAAABAAQABgAAAAAAAAABAAUABgAAAAAAAAABAAYABgAAAAAAAAABAAcABgAAAAAAAAACAAEABgAAAAAAAAACAAIABgAAAAAAAAACAAMABgAAAAAAAAACAAQABgAAAAAAAAACAAUABgAAAAAAAAACAAYABgAAAAAAAAACAAcABgAAAAAAAAADAAEABgAAAAAAAAADAAIABgAAAAAAAAADAAMABgAAAAAAAAADAAQABgAAAAAAAAADAAUABgAAAAAAAAADAAYABgAAAAAAAAADAAcABgAAAAAAAAAEAAIABgAAAAAAAAAEAAMABgAAAAAAAAAEAAQABgAAAAAAAAAEAAUABgAAAAAAAAAEAAYABgAAAAAAAAAEAAcABgAAAAAAAAAFAAIABgAAAAAAAAAFAAMABgAAAAAAAAAFAAQABgAAAAAAAAAFAAUABgAAAAAAAAAFAAYABgAAAAAAAAAFAAcABgAAAAAAAAAGAAIABgAAAAAAAAAGAAMABgAAAAAAAAAGAAQABgAAAAAAAAAGAAUABgAAAAAAAAAGAAYABgAAAAAAAAAGAAcABgAAAAAAAAAHAAIABgAAAAAAAAAHAAMABgAAAAAAAAAHAAQABgAAAAAAAAAHAAUABgAAAAAAAAAHAAYABgAAAAAAAAAHAAcABgAAAAAAAAA=")
tile_set = ExtResource("3_nyp61")

[node name="Units" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(960, 540)
position_smoothing_enabled = true

[node name="Utils" type="Node" parent="."]

[node name="TurnManager" type="Node" parent="Utils" groups=["turn_manager"]]
script = ExtResource("4_2ckr4")

[node name="DamageManager" type="Node" parent="Utils"]
script = ExtResource("4_vbfmk")

[node name="SetupManager" type="Node" parent="Utils"]
script = ExtResource("8_q5nyf")

[node name="MapManager" type="Node" parent="Utils"]
script = ExtResource("9_q5nyf")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CombatLogUi" parent="UI" instance=ExtResource("6_mgs6c")]
anchors_preset = -1
anchor_right = 0.304
anchor_bottom = 0.5
offset_left = 1099.0
offset_top = 171.0
offset_right = 515.32
offset_bottom = -369.0

[connection signal="beast_turn_started" from="Utils/TurnManager" to="." method="_on_beast_turn_started"]
